// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleCards Paragraph Check Paragraph 1`] = `
{
  "p": {
    "bottom-gap-unit-xl": "px",
    "bottom-gap-xl": 20,
    "color": "",
    "color-global": true,
    "font-size-unit-xl": "px",
    "font-size-xl": 20,
    "font-style-xl": "italic",
    "font-weight-xl": "300",
    "letter-spacing-unit-xl": "px",
    "letter-spacing-xl": 5,
    "line-height-unit-xl": "px",
    "line-height-xl": 10,
    "palette-color": 4,
    "palette-opacity": 1,
    "palette-status": true,
    "text-decoration-xl": "overline",
    "text-indent-unit-xl": "px",
    "text-indent-xl": 44,
    "text-transform-xl": "capitalize",
    "white-space-xl": "pre",
    "word-spacing-unit-xl": "px",
    "word-spacing-xl": 10,
  },
}
`;

exports[`StyleCards Paragraph Works on responsive 1`] = `
{
  "p": {
    "bottom-gap-m": 10,
    "bottom-gap-unit-m": "px",
    "bottom-gap-unit-xl": "px",
    "bottom-gap-xl": 20,
    "color": "",
    "color-global": true,
    "font-size-m": 10,
    "font-size-unit-m": "px",
    "font-size-unit-xl": "px",
    "font-size-xl": 20,
    "font-style-m": "oblique",
    "font-style-xl": "italic",
    "font-weight-m": "400",
    "font-weight-xl": "300",
    "letter-spacing-m": 15,
    "letter-spacing-unit-m": "px",
    "letter-spacing-unit-xl": "px",
    "letter-spacing-xl": 5,
    "line-height-m": 20,
    "line-height-unit-m": "px",
    "line-height-unit-xl": "px",
    "line-height-xl": 10,
    "palette-color": 4,
    "palette-opacity": 1,
    "palette-status": true,
    "text-decoration-m": "underline",
    "text-decoration-xl": "overline",
    "text-indent-m": 22,
    "text-indent-unit-m": "px",
    "text-indent-unit-xl": "px",
    "text-indent-xl": 44,
    "text-transform-m": "uppercase",
    "text-transform-xl": "capitalize",
    "white-space-m": "pre-wrap",
    "white-space-xl": "pre",
    "word-spacing-m": 20,
    "word-spacing-unit-m": "px",
    "word-spacing-unit-xl": "px",
    "word-spacing-xl": 10,
  },
}
`;
